# datascientest

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: wgi.csv  wgi_ready.csv  wgi_save.csv
docs/: recap_metriques_ml.md
scripts/: README.md  aspirer_site.py  classification_1.py  classification_2.py  combine_frame_content.py  configuration.py  dataframe_tools.pm  dimension_reduction_00.py  dimension_reduction_01.py  dimension_reduction_02.py  dimension_reduction_03.py  fonctions_evaluation_model.ipynb  formats.py  frame.py  generation_slide_rakuten.py  genere_ppt.py  genere_structure_projet.py  matplotlib_1.py  matplotlib_2.py  matplotlib_3.py  matplotlib_obj_1.py  pandas_1.py  pandas_recap.py  pie_test_00.py  poo_1.py  poo_2.py  pyproject.toml  python_avance.py  python_avance_exam.py  rakuten_synthèse.pptx  regression.pm  regression_1.py  requirements.txt  seaborn_1.py  sprint_classification_01_reg_log.py  sprint_classification_02_svm.py  sprint_classification_03_knn.py  sprint_classification_04_tree.py  sprint_classification_05_boost_bag_.py  sprint_classification_06_rf.py  (+19 more)
tests/: README.md  test_aspirer_site.py  test_configuration.py  test_formats.py  test_generateur_structure.py  test_validation.py
