[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extracteur_web"
version = "1.0.0"
description = "Extracteur de contenu web avec formats de sortie flexibles"
authors = [
    {name = "Votre Nom", email = "votre@email.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "requests>=2.25",
    "beautifulsoup4>=4.11",
    "pydantic>=2.0",
    "psycopg2-binary>=2.9",
    "mysql-connector-python>=8.0",
    "cx-Oracle>=8.0"
]
